<resources>
    <string name="app_name">TotDesigner</string>
    <string name="toolbar_title_main">TOTDESIGNER Player</string>
    <string name="my_device">На моем устройстве</string>
    <string name="catalog_title">Каталог квестов/курсов</string>
    <string name="folder_title">Открыть с диска</string>
    <string name="setting">Настройки</string>
    <string name="title_catalog">Каталог</string>
    <string name="description_catalog">Здесь расположены интерактивные 2D/3D/AR курсы и образовательные-игровые квесты для приобретения и загрузки. После загрузки они будут доступны этом Android устройстве без обязательного подключения сети интернет.</string>
    <string name="btn_text_scroll">ВЕРНУТЬСЯ В НАЧАЛО</string>
    <string name="title_paid_quest_item">Квесты / курсы по подписке</string>
    <string name="title_free_quest_item">Все курсы</string>
    <string name="title_home">Мои курсы/квесты</string>
    <string name="description_home">Здесь расположены и будут располагаться приобретенные и загруженные интерактивные 2D/3D/AR курсы и образовательные-игровые квесты. Они расположены на этом Android устройстве. Вы можете скачать больше контента в Каталоге курсов/квестов TOTDESIGNER.</string>
    <string name="title_quest_list">Квесты / курсы по подписке</string>
    <string name="search_empty_catalog"> \'%s\'   квеста с таким названием не найдено</string>
    <string name="todo">TODO</string>
    <string name="back_catalog">В КАТАЛОГ</string>
    <string name="download">СКАЧАТЬ</string>
    <string name="issue_subscription">ОФОРМИТЬ ПОДПИСКУ</string>
    <string name="free_download_description">Вы можете загрузить данный интерактивный 2D/3D/AR курс и/или образовательный игровой квест бесплатно, без подписки. Нажмите «Скачать курс» или продолжите выбор в каталоге</string>
    <string name="paid_download_description">Вы сможете загрузить данный интерактивный 2D/3D/AR курс и/или образовательный игровой квест после оформления подписки. Нажмите «Оформить подписку», выберите план подиски или продолжите выбор в каталоге</string>
    <string name="loading_progress_message">загрузка…</string>
    <string name="loading_progress_messages">загрузка: %s …</string>
    <string name="cancel">отменить</string>
    <string name="back_to_catalog">ВЕРНУТЬСЯ В КАТАЛОГ</string>
    <string name="clear_list">ОЧИСТИТЬ СПИСОК</string>
    <string name="cancel_all">ОТМЕНИТЬ ВСЕ</string>
    <string name="download_error_hint">При загрузке произошла ошибка</string>
    <string name="retry">Повторить</string>
    <string name="open">открыть</string>
    <string name="done">Готово</string>
    <string name="delete">Удалить</string>
    <string name="catalog">Каталог</string>
    <string name="run_lesson">Запустить</string>
    <string name="download_list">ЗАГРУЗКИ</string>
    <string name="error_user_message">Что-то пошло не так</string>
    <string name="next_stage">ПРОДОЛЖИТЬ</string>
    <string name="hint_empty_part_image">Освойте текущею информацию</string>
    <string name="done_lesson">Этап успешно завершен</string>
    <string name="design_title">Дизайн</string>
    <string name="design_description">Выберите фоновое изображение для разделов «Мои курсы/квесты» , «Каталог» и нажмите применить.</string>
    <string name="totdesigner">TOTDESIGNER</string>
    <string name="home_title">Home</string>
    <string name="red_planet_title">Red planet</string>
    <string name="ice_title">Ice</string>
    <string name="business">Business</string>
    <string name="office">Office</string>
    <string name="yellow_flower">Yellow Flower</string>
    <string name="blue_flower">Blue Flower</string>
    <string name="spring">Spring</string>
    <string name="summer">Summer</string>
    <string name="autumn">Autumn</string>
    <string name="black_and_white"><![CDATA[Black & White]]></string>
    <string name="handling_subscription_title">Управление подпиской</string>
    <string name="activie_status_subscription_title">Активная подписка</string>
    <string name="description_status_subscription_not_active">Нет сведений об активной подписке</string>
    <string name="action_recover_subscription_status">ВОССТАНОВИТЬ ПОКУПКУ</string>
    <string name="me_statistic">Ваша статистика</string>
    <string name="retry_run_lesson">ПРОЙТИ ЕЩЕ РАЗ</string>
    <string name="description_save_from_pdf">СОХРАНИТЬ РЕЗУЛЬТАТЫ В PDF</string>
    <string name="done_stage_lesson">Успешно пройдено этапов:</string>
    <string name="zero_count">0</string>
    <string name="skip_step">Пропущенные:</string>
    <string name="failed_step">Непройденные:</string>
</resources>
