<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootContainerDetailedLesson"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="400dp"
            android:layout_gravity="start|center"
            android:background="@drawable/img_logotype"
            android:contentDescription="@string/todo"
            android:translationX="-90dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lessonDetailed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/margin_16"
            android:paddingTop="@dimen/margin_16"
            android:paddingEnd="@dimen/margin_16"
            android:paddingBottom="@dimen/margin_40" />

        <LinearLayout
            android:id="@+id/containerBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:paddingStart="@dimen/margin_16"
            android:paddingEnd="@dimen/margin_16"
            android:paddingBottom="@dimen/margin_16">

            <TextView
                android:id="@+id/tvBackCatalog"
                style="@style/TextButtonMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/catalog"
                android:textSize="@dimen/font_14" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="0.1" />

            <TextView
                android:id="@+id/tvDelete"
                style="@style/TextButtonMain"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:text="@string/delete"
                android:textSize="@dimen/font_14" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tvRunLesson"
                style="@style/TextButtonMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/run_lesson"
                android:textSize="@dimen/font_14"

                />
        </LinearLayout>


    </FrameLayout>

</FrameLayout>