<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvBackToCatalog"
        style="@style/TextButtonMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_56"
        android:layout_marginTop="@dimen/margin_24"
        android:layout_marginBottom="@dimen/margin_8"
        android:text="@string/back_to_catalog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvClearList"
        style="@style/TextButtonMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_list"
        app:layout_constraintBottom_toBottomOf="@+id/tvBackToCatalog"
        app:layout_constraintEnd_toStartOf="@+id/tvCancelAll"
        app:layout_constraintTop_toTopOf="@+id/tvBackToCatalog" />

    <TextView
        android:id="@+id/tvCancelAll"
        style="@style/TextButtonMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_24"
        android:text="@string/cancel_all"
        app:layout_constraintBottom_toBottomOf="@id/tvClearList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvClearList" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvLoading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingTop="@dimen/margin_16"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBackToCatalog"
        tools:listitem="@layout/item_loading_detailed" />

</androidx.constraintlayout.widget.ConstraintLayout>