<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerTitleContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:clickable="true"
    android:focusable="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:clickable="true"
        android:duplicateParentState="true"
        android:focusable="true">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="400dp"
            android:layout_gravity="bottom"
            android:layout_marginTop="150dp"
            android:background="@drawable/img_logotype"
            android:contentDescription="@string/todo"
            android:translationX="-100dp" />

        <LinearLayout
            android:id="@+id/containerContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/margin_16">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/margin_16"
                android:layout_weight="1"
                app:cardCornerRadius="@dimen/margin_8">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivImageQuest"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/ic_setting" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvTitle"
                style="@style/DialogTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16"
                tools:text="Основы проектирования UX UI - Wireframe" />

            <TextView
                android:id="@+id/tvDescription"
                style="@style/DialogDescriptionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16"
                tools:text="Вы можете загрузить данный интерактивный 2D/3D/AR курс и/или образовательный игровой квест бесплатно, без подписки. Нажмите «Скачать курс» или продолжите выбор в каталоге" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_12"
                android:layout_marginEnd="@dimen/margin_12"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvBack"
                    style="@style/TextButtonMain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back_catalog"
                    android:textSize="@dimen/font_14" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tvDownload"
                    style="@style/TextButtonMain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/download"
                    android:textSize="@dimen/font_14"

                    />

            </LinearLayout>

        </LinearLayout>
    </FrameLayout>


</FrameLayout>